// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterComic Default render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="characterComic"
        data-testid="characterComic-40632"
      >
        <div
          class="characterComic__image"
          data-testid="characterComic-40632-image"
          style="background-image: url(http://i.annihil.us/u/prod/marvel/i/mg/2/00/5ba3bfcc55f5a.jpg);"
        />
        <p
          class="characterComic__title"
          data-testid="characterComic-40632-title"
        >
          Hulk (2008) #53
        </p>
        <p
          class="characterComic__onsaleDate"
          data-testid="characterComic-40632-onsaleDate"
        >
          2012
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="characterComic"
      data-testid="characterComic-40632"
    >
      <div
        class="characterComic__image"
        data-testid="characterComic-40632-image"
        style="background-image: url(http://i.annihil.us/u/prod/marvel/i/mg/2/00/5ba3bfcc55f5a.jpg);"
      />
      <p
        class="characterComic__title"
        data-testid="characterComic-40632-title"
      >
        Hulk (2008) #53
      </p>
      <p
        class="characterComic__onsaleDate"
        data-testid="characterComic-40632-onsaleDate"
      >
        2012
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CharacterComic Empty onsaleDate render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="characterComic"
        data-testid="characterComic-40632"
      >
        <div
          class="characterComic__image"
          data-testid="characterComic-40632-image"
          style="background-image: url(http://i.annihil.us/u/prod/marvel/i/mg/2/00/5ba3bfcc55f5a.jpg);"
        />
        <p
          class="characterComic__title"
          data-testid="characterComic-40632-title"
        >
          Hulk (2008) #53
        </p>
        <p
          class="characterComic__onsaleDate"
          data-testid="characterComic-40632-onsaleDate"
        >
          -
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="characterComic"
      data-testid="characterComic-40632"
    >
      <div
        class="characterComic__image"
        data-testid="characterComic-40632-image"
        style="background-image: url(http://i.annihil.us/u/prod/marvel/i/mg/2/00/5ba3bfcc55f5a.jpg);"
      />
      <p
        class="characterComic__title"
        data-testid="characterComic-40632-title"
      >
        Hulk (2008) #53
      </p>
      <p
        class="characterComic__onsaleDate"
        data-testid="characterComic-40632-onsaleDate"
      >
        -
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
